--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "devDependencies": {
     "@types/node": "18.11.14",
-    "@types/react": "^18.0.26",
-    "typescript": "^4.9.4"
+    "@types/react": "^18.0.26"
   }
 }
