--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build && npm run postbuild"
+  command = "yarn build"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "20"
