--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "devDependencies": {
     "@types/node": "18.11.14",
     "@types/react": "^18.0.26"
+  },
+  "resolutions": {
+    "axios": "^1.7.8"
   }
 }
