--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "^15.5.7",
     "next-sitemap": "^4.0.6",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "resend": "^6.6.0"
   },
   "devDependencies": {
     "@types/node": "18.11.14",
