--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
-    "eslint": "8.29.0",
+"eslint": "8.29.0",
     "eslint-config-next": "^15.5.4",
     "gray-matter": "^4.0.3",
     "leaflet": "^1.9.4",
@@ -27,7 +26,5 @@
     "@types/node": "18.11.14",
     "@types/react": "^18.0.26"
   },
-  "resolutions": {
-    "axios": "^1.7.8"
-  }
+  "resolutions": {}
 }
